Added --concise flag to reduce test output.

--- a/.github/workflows/test_coverage_sync.yml
+++ b/.github/workflows/test_coverage_sync.yml
@@ -52,7 +52,8 @@ jobs:
             --code-coverage \
             --result-format json \
             --output-dir test-results \
-            --wait 25
+            --wait 25 \
+            --concise \
             > test-run-output.log 2>&1 || true
           
           # Check if test results exist
